--- a/Asst-0.html
+++ b/Asst-0.html
@@ -9,28 +9,28 @@ Replace the text below with your own information. Then open the file in a browse
 <!DOCTYPE html>
 <html>
 <head>
-<title> MYNAME </title>
+<title> About Me </title>
 </head>
 <body>
 
 <h1>My Tech Skills</h1>
 <i>(1-beginner/rusty, 2-pretty comfortable, 3- Pro)</i>
 <ul>
-  <li>ONE THING (1)</li>
-  <li>ANOTHER THING (3)</li>
+  <li>Troubleshooting (2)</li>
+  <li>Computer building (2)</li>
   <li>AND AS MANY AS YOU CARE TO LIST (1)</li>
 </ul>
 
 <h1>My Tech Interests</h1>
 <ul>
-  <li>ONE THING</li>
-  <li>ANOTHER THING</li>
-  <li>AND AS MANY AS YOU CARE TO LIST</li>
+  <li>Computer building</li>
+  <li>PC gaming</li>
+  <li>Electric Vehicles</li>
 </ul>
 
-<p>I'M TAKING THIS COURSE BECAUSE...</p>
+<p>I'M TAKING THIS COURSE BECAUSE... I have an interest in coding and programming and might pursue a career in this field.</p>
 
-<img src="COPY THE FULL URL(WEB ADDRESS) OF AN IMAGE HERE" alt="DESCRIBE THE IMAGE">
+<img src="http://shared.frenys.com/assets/1023908/6149126.jpg" alt="THis is a picture of a super cute cat that has a surprised expression">
   
 </body>
 </html>
