--- a/Asst-0.html
+++ b/Asst-0.html
@@ -29,7 +29,7 @@ Replace the text below with your own information. Then open the file in a browse
 
 <p>I'M TAKING THIS COURSE BECAUSE... I have an interest in coding and programming and might pursue a career in this field.</p>
 
-<img src="http://shared.frenys.com/assets/1023908/6149126.jpg" alt="THis is a picture of a super cute cat that has a surprised expression">
+<img src="http://shared.frenys.com/assets/1023908/6149126.jpg" alt="This is a picture of a super cute cat that has a surprised expression.">
   
 </body>
 </html>
